--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.17.1",
     "mongoose": "^5.11.15",
     "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0"
   }
 }
